separate notebooks for showing teh scales and printing metadata

--- a/src/notebooks/carran_analysis/4-show_scales.ipynb
+++ b/src/notebooks/carran_analysis/4-show_scales.ipynb
@@ -1,40 +1,55 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "93ebd05a",
+   "metadata": {},
+   "source": [
+    "Show some scales\n",
+    "====\n",
+    "As an illustrative example of the data we're working with."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "53656a68",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Read the metadata\n",
+    "\"\"\"\n",
     "import pathlib\n",
+    "import numpy as np\n",
     "\n",
-    "parent_dir = pathlib.Path(\n",
-    "    \"~/zebrafish_rdsf/Carran/Postgrad/segmentations_cleaned\"\n",
+    "from scale_morphology.scales import util\n",
+    "from scale_morphology.scales import metadata\n",
+    "\n",
+    "parent_dir = (\n",
+    "    pathlib.Path(util.config()[\"rdsf_mount\"]) / \"Carran/Postgrad/Scale images from WT_spp1_sost/TIFs/segmentations\"\n",
     ").expanduser()\n",
     "assert parent_dir.exists()\n",
     "\n",
     "segmentation_paths = sorted([str(x) for x in parent_dir.glob(\"*.tif\")])\n",
-    "f\"{len(segmentation_paths)} segmentations\""
+    "\n",
+    "df = metadata.df([str(x) for x in segmentation_paths]).drop(columns=\"no_scale\")\n",
+    "assert len(df) == 928, \"Did the number of scales change?\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30930586",
+   "id": "66e4de13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "clean_seg_dir = parent_dir.parents[2] / \"segmentations_cleaned\"\n",
+    "clean_seg_paths = [clean_seg_dir / pathlib.Path(p).name for p in segmentation_paths]\n",
     "\n",
-    "from scale_morphology.scales import metadata\n",
-    "\n",
-    "df = metadata.df([str(x) for x in segmentation_paths])\n",
-    "df = df.drop(columns=\"no_scale\")\n",
-    "\n",
-    "assert len(df) == 928, \"Did the number of scales change?\"\n",
-    "print(len(df), \"scales after dropping empty ones\")\n",
-    "df.head()"
+    "# Check they all exist...\n",
+    "for p in clean_seg_paths:\n",
+    "    assert p.exists()"
    ]
   },
   {
@@ -62,6 +77,215 @@
     "    axis.set_title(\"\\n\".join(textwrap.wrap(pathlib.Path(path).stem, width=20)))\n",
     "    axis.set_xticks([])\n",
     "    axis.set_yticks([])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "992b68a5",
+   "metadata": {},
+   "source": [
+    "Carran's Segmentations\n",
+    "----\n",
+    "We used an AI model to perform the segmentation, but sometimes this didn't work properly.\n",
+    "\n",
+    "Carran went through the segmentations, manually correcting the ones that didn't look right. We can plot the differences:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7d60bcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Read in pairs of the clean/raw segmentations, filling holes/removing small objects from the cleaned segmentation.\n",
+    "\n",
+    "Keep track of which ones differ from the clean segmentation\n",
+    "\"\"\"\n",
+    "\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
+    "\n",
+    "import tifffile\n",
+    "import numpy as np\n",
+    "from tqdm.notebook import tqdm\n",
+    "from skimage.measure import euler_number\n",
+    "from scipy.ndimage import binary_fill_holes\n",
+    "\n",
+    "from scale_morphology.scales.segmentation import largest_connected_component\n",
+    "\n",
+    "scale_paths = df[\"path\"]\n",
+    "\n",
+    "\n",
+    "def load_scale_data(paths):\n",
+    "    \"\"\"\n",
+    "    Takes (i, (scale_path, raw_seg_path, clean_seg_path))\n",
+    "\n",
+    "    Returns (cleaned_by_carran, fixed_in_post, raw_seg, carran_seg, clean_seg)\n",
+    "    \"\"\"\n",
+    "    i, (scale_path, raw_seg_path, clean_seg_path) = paths\n",
+    "\n",
+    "    raw_seg = (tifffile.imread(raw_seg_path) * 255).astype(np.uint8)\n",
+    "    carran_seg = tifffile.imread(clean_seg_path)\n",
+    "\n",
+    "    cleaned_by_carran = (carran_seg != raw_seg).any()\n",
+    "\n",
+    "    fixed_in_post = euler_number(carran_seg) != 1\n",
+    "    if fixed_in_post:\n",
+    "        # Fill holes\n",
+    "        clean_seg = binary_fill_holes(carran_seg)\n",
+    "        # Remove small objects\n",
+    "        clean_seg = (largest_connected_component(clean_seg) * 255).astype(np.uint8)\n",
+    "\n",
+    "        # It's possible we might have removed everything, so just make sure we haven't here\n",
+    "        if euler_number(clean_seg) != 1:\n",
+    "            raise ValueError(f\"Got {euler_number(clean_seg)=}\")\n",
+    "    else:\n",
+    "        clean_seg = carran_seg\n",
+    "\n",
+    "    return cleaned_by_carran, fixed_in_post, raw_seg, carran_seg, clean_seg\n",
+    "\n",
+    "\n",
+    "with ThreadPoolExecutor(max_workers=32) as executor:\n",
+    "    results = list(\n",
+    "        tqdm(\n",
+    "            executor.map(\n",
+    "                load_scale_data,\n",
+    "                enumerate(zip(scale_paths, segmentation_paths, clean_seg_paths)),\n",
+    "            ),\n",
+    "            total=len(scale_paths),\n",
+    "        )\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "402c28fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_segs = []\n",
+    "carran_segs = []\n",
+    "clean_segs = []\n",
+    "\n",
+    "# Which segmentations were edited by Carran and which segmentations we needed\n",
+    "# to fill holes/remove small objects from\n",
+    "cleaned_by_carran = []\n",
+    "fixed_in_post = []\n",
+    "\n",
+    "for _carran_fix, _post_fix, _raw, _carran, _clean in results:\n",
+    "    cleaned_by_carran.append(_carran_fix)\n",
+    "    fixed_in_post.append(_post_fix)\n",
+    "\n",
+    "    raw_segs.append(_raw)\n",
+    "    carran_segs.append(_carran)\n",
+    "    clean_segs.append(_clean)\n",
+    "\n",
+    "cleaned_by_carran = np.array(cleaned_by_carran)\n",
+    "fixed_in_post = np.array(fixed_in_post)\n",
+    "\n",
+    "raw_segs = np.array(raw_segs)\n",
+    "carran_segs = np.array(carran_segs)\n",
+    "clean_segs = np.array(clean_segs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "867675b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Show the masks that Carran edited\n",
+    "\"\"\"\n",
+    "\n",
+    "import textwrap\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import colors\n",
+    "\n",
+    "\n",
+    "def clear_seismic() -> colors.Colormap:\n",
+    "    \"\"\"\n",
+    "    Colormap that varies from blue to red via transparent\n",
+    "    \"\"\"\n",
+    "    c_blue = colors.colorConverter.to_rgba(\"blue\")\n",
+    "    c_white = colors.colorConverter.to_rgba(\"white\", alpha=0)\n",
+    "    c_red = colors.colorConverter.to_rgba(\"red\")\n",
+    "    return colors.ListedColormap([c_blue, c_white, c_red], f\"clear2seismic\")\n",
+    "\n",
+    "\n",
+    "fig, axes = plt.subplots(10, 10, figsize=(24, 24))\n",
+    "\n",
+    "for axis, path, _raw, _cleaned in zip(\n",
+    "    axes.flat,\n",
+    "    df[\"path\"][cleaned_by_carran],\n",
+    "    raw_segs[cleaned_by_carran],\n",
+    "    carran_segs[cleaned_by_carran],\n",
+    "):\n",
+    "    axis.imshow(_raw, alpha=0.5)\n",
+    "    axis.imshow(\n",
+    "        _raw.astype(int) - _cleaned,\n",
+    "        cmap=clear_seismic(),\n",
+    "        vmin=-255,\n",
+    "        vmax=255,\n",
+    "        interpolation=\"none\",\n",
+    "    )\n",
+    "\n",
+    "    axis.set_title(\n",
+    "        \"\\n\".join(textwrap.wrap(pathlib.Path(path).name, width=20))\n",
+    "        .strip(\".tif\")\n",
+    "        .replace(\"_\", \" \"),\n",
+    "        fontsize=8,\n",
+    "    )\n",
+    "    axis.set_axis_off()\n",
+    "\n",
+    "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d413e9a4",
+   "metadata": {},
+   "source": [
+    "We might also be interested in seeing which scales have differences from the automatic hole filling/object moving correction:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "147ee1b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(12, 12, figsize=(24, 24))\n",
+    "\n",
+    "for axis, path, _raw, _cleaned in zip(\n",
+    "    axes.flat,\n",
+    "    df[\"path\"][fixed_in_post],\n",
+    "    carran_segs[fixed_in_post],\n",
+    "    clean_segs[fixed_in_post],\n",
+    "):\n",
+    "    axis.imshow(_raw, alpha=0.5)\n",
+    "\n",
+    "    diff = _raw.astype(int) - _cleaned\n",
+    "\n",
+    "    y, x = np.argwhere(diff == -255).T\n",
+    "    axis.scatter(x, y, s=1, c=\"blue\")\n",
+    "\n",
+    "    y, x = np.argwhere(diff == 255).T\n",
+    "    axis.scatter(x, y, s=1, c=\"red\")\n",
+    "\n",
+    "    axis.set_title(\n",
+    "        \"\\n\".join(textwrap.wrap(pathlib.Path(path).name, width=20))\n",
+    "        .strip(\".tif\")\n",
+    "        .replace(\"_\", \" \"),\n",
+    "        fontsize=8,\n",
+    "    )\n",
+    "    axis.set_axis_off()\n",
+    "\n",
+    "fig.tight_layout()"
    ]
   }
  ],
