--- a/src/segmentation/segmentation.ipynb
+++ b/src/segmentation/segmentation.ipynb
@@ -7,6 +7,11 @@
    "source": [
     "Conversion + Segmentation of LIF files\n",
     "====\n",
+    "This notebook runs through segmentation of the ALP stained LIF files on the RDSF.\n",
+    "\n",
+    "I'd suggest writing a new notebook (take inspiration from this one, or any others that might be in this directory)\n",
+    "if you want to segment something else (i.e. if you have taken new images and want to segment them out).\n",
+    "\n",
     "- Read in the LIF files\n",
     "- Save them as TIFs (they're nicer for me to work with)\n",
     "- Segment them with my pipeline\n",
@@ -28,6 +33,7 @@
     "\n",
     "import pathlib\n",
     "\n",
+    "# the directory containing microscopy images\n",
     "parent_dir = pathlib.Path(\n",
     "    \"~/zebrafish_rdsf/Carran/Postgrad/Scale images from WT_spp1_sost\"\n",
     ").expanduser()\n",
@@ -46,8 +52,7 @@
     "\"\"\"\n",
     "Get rid of some weird ones\n",
     "\"\"\"\n",
-    "lif_paths = [l for l in lif_paths if \"out of focus\" not in str(l) and not l.is_dir() and not l.stem == \".DS_Store\"]\n",
-    "lif_paths"
+    "lif_paths = [l for l in lif_paths if \"out of focus\" not in str(l) and not l.is_dir() and not l.stem == \".DS_Store\"]"
    ]
   },
   {
@@ -62,41 +67,14 @@
     "\"\"\"\n",
     "\n",
     "import pandas as pd\n",
-    "\n",
-    "\n",
-    "def get_stain(name: str) -> str:\n",
-    "    \"\"\"\n",
-    "    Expect either KOSSA, ALP or TRAP\n",
-    "    \"\"\"\n",
-    "    # Expect name to always end in .lif\n",
-    "    (stem, ending) = name.split(\".lif\")\n",
-    "    assert not ending, f\"{stem}, {ending}\"\n",
-    "\n",
-    "    vk, alp, trap = False, False, False\n",
-    "    if \"KOSSA\" in stem or \"VK\" in stem:\n",
-    "        vk = True\n",
-    "    if \"ALP\" in stem:\n",
-    "        alp = True\n",
-    "    if \"TRAP\" in stem:\n",
-    "        trap = True\n",
-    "    \n",
-    "    if vk + alp + trap != 1:\n",
-    "        raise ValueError(f\"Unknown stain for {stem}; {vk=}, {alp=}, {trap=}\")\n",
-    "    \n",
-    "    if vk:\n",
-    "        return \"KOSSA\"\n",
-    "    if alp:\n",
-    "        return \"ALP\"\n",
-    "    return \"TRAP\"\n",
-    "    \n",
+    "from scale_morphology.scales import metadata\n",
     "\n",
     "\n",
     "lif_df = pd.DataFrame(columns=[\"path\"])\n",
     "lif_df[\"path\"] = lif_paths\n",
-    "lif_df[\"name\"] = lif_df[\"path\"].apply(lambda p: pathlib.Path(p).name)\n",
-    "lif_df[\"stain\"] = lif_df[\"name\"].apply(get_stain)\n",
-    "\n",
-    "lif_df"
+    "lif_df[\"stain\"] = lif_df[\"path\"].apply(\n",
+    "    lambda x: metadata.stain(str(x).replace(\"lif\", \"tif\"))\n",
+    ")"
    ]
   },
   {
@@ -110,39 +88,7 @@
     "Extract ages\n",
     "\"\"\"\n",
     "\n",
-    "\n",
-    "def get_year(stem):\n",
-    "    \"\"\"\n",
-    "    Extract years from a filepath\n",
-    "    \"\"\"\n",
-    "    if \"year\" not in stem:\n",
-    "        return 0\n",
-    "\n",
-    "    year_str, _ = stem.split(\"year\")\n",
-    "    return int(year_str.strip()[-1])\n",
-    "\n",
-    "\n",
-    "def get_month(stem):\n",
-    "    \"\"\"\n",
-    "    Extract months from a filepath\n",
-    "    \"\"\"\n",
-    "    if not \"month\" in stem:\n",
-    "        return 0\n",
-    "    month_str, _ = stem.split(\"month\")\n",
-    "    month_str = month_str.strip()\n",
-    "\n",
-    "    # We might have a 2-digit month, so check for that here\n",
-    "    if month_str[-2].isdigit():\n",
-    "        return int(month_str[-2:])\n",
-    "    return int(month_str[-1])\n",
-    "\n",
-    "\n",
-    "def get_age(stem):\n",
-    "    \"\"\"Get age in months\"\"\"\n",
-    "    return 12 * get_year(stem) + get_month(stem)\n",
-    "\n",
-    "\n",
-    "lif_df[\"age\"] = lif_df[\"name\"].apply(get_age)"
+    "lif_df[\"age\"] = lif_df[\"path\"].apply(lambda x: metadata.age(x.stem))"
    ]
   },
   {
@@ -155,8 +101,7 @@
     "\"\"\"\n",
     "Select only the ALP ones, for now\n",
     "\"\"\"\n",
-    "alp_df = lif_df[lif_df[\"stain\"] == \"ALP\"]\n",
-    "alp_df"
+    "alp_df = lif_df[lif_df[\"stain\"] == \"ALP\"]"
    ]
   },
   {
@@ -211,16 +156,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d28673fd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert False"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "6aebd099",
    "metadata": {},
@@ -233,12 +168,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33ef3ec1",
+   "id": "11ad6e21",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "\"\"\"\n",
+    "Get the desired output directory from the config file\n",
+    "\"\"\"\n",
+    "\n",
+    "import pathlib\n",
+    "import yaml\n",
+    "\n",
+    "cfg_path = pathlib.Path(\"config.yaml\")\n",
+    "with open(cfg_path, \"r\") as f:\n",
+    "    out_dir = pathlib.Path(yaml.safe_load(f)[\"auto_segmentation_dir\"]).resolve()"
    ]
   },
   {
@@ -248,9 +191,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" \"\"\"\n",
-    "\n",
-    "import pathlib\n",
+    "\"\"\"\n",
+    "Get the input directory - from my RDSF mount point\n",
+    "\"\"\"\n",
     "\n",
     "parent_dir = pathlib.Path(\n",
     "    \"~/zebrafish_rdsf/Carran/Postgrad/Scale images from WT_spp1_sost\"\n",
@@ -260,12 +203,32 @@
     "in_dir = parent_dir / \"TIFs\"\n",
     "assert in_dir.is_dir()\n",
     "\n",
-    "out_dir = in_dir / \"segmentations\"\n",
-    "out_dir.mkdir(exist_ok=True)\n",
-    "\n",
     "in_paths = sorted(list(in_dir.glob(\"*.tif\")))\n",
     "\n",
     "out_paths = [out_dir / (name.stem + \"_segmentation.tif\") for name in in_paths]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c19cdc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Download SAM model weights\n",
+    "\"\"\"\n",
+    "\n",
+    "import requests\n",
+    "\n",
+    "url = \"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_h_4b8939.pth\"\n",
+    "sam_dir = pathlib.Path(\"checkpoints/\")\n",
+    "sam_dir.mkdir(exist_ok=True)\n",
+    "sam_path = sam_dir / \"sam_vit_h_4b8939.pth\"\n",
+    "\n",
+    "if not sam_path.is_file():\n",
+    "    with open(sam_path, \"wb\") as f:\n",
+    "        f.write(requests.get(url).content)"
    ]
   },
   {
@@ -288,7 +251,7 @@
     "        img,\n",
     "        device=\"cuda\",\n",
     "        model_type=\"vit_h\",\n",
-    "        model_checkpoint=pathlib.Path(\"checkpoints\") / \"sam_vit_h_4b8939.pth\",\n",
+    "        model_checkpoint=sam_path,\n",
     "    )\n",
     "    tifffile.imwrite(out_path, mask)"
    ]
