Change segmentation notebook to only work with a flat input directory

--- a/src/segmentation/segmentation.ipynb
+++ b/src/segmentation/segmentation.ipynb
@@ -179,9 +179,15 @@
     "import pathlib\n",
     "import yaml\n",
     "\n",
+    "with open(\"hi.txt\", \"w\") as f:\n",
+    "    f.write(\"hi\\n\")\n",
+    "\n",
     "cfg_path = pathlib.Path(\"config.yaml\")\n",
     "with open(cfg_path, \"r\") as f:\n",
-    "    out_dir = pathlib.Path(yaml.safe_load(f)[\"auto_segmentation_dir\"]).resolve()"
+    "    out_dir = (\n",
+    "        pathlib.Path(yaml.safe_load(f)[\"auto_segmentation_dir\"]).expanduser().resolve()\n",
+    "    )\n",
+    "out_dir.mkdir(exist_ok=True, parents=True)"
    ]
   },
   {
@@ -195,14 +201,10 @@
     "Get the input directory - from my RDSF mount point\n",
     "\"\"\"\n",
     "\n",
-    "parent_dir = pathlib.Path(\n",
-    "    \"~/zebrafish_rdsf/Carran/Postgrad/Scale images from WT_spp1_sost\"\n",
-    ").expanduser()\n",
-    "assert parent_dir.exists()\n",
+    "with open(cfg_path, \"r\") as f:\n",
+    "    in_dir = pathlib.Path(yaml.safe_load(f)[\"input_tif_dir\"]).expanduser().resolve()\n",
     "\n",
-    "in_dir = parent_dir / \"TIFs\"\n",
-    "assert in_dir.is_dir()\n",
-    "\n",
+    "assert in_dir.is_dir(), in_dir\n",
     "in_paths = sorted(list(in_dir.glob(\"*.tif\")))\n",
     "\n",
     "out_paths = [out_dir / (name.stem + \"_segmentation.tif\") for name in in_paths]"
@@ -253,7 +255,10 @@
     "        model_type=\"vit_h\",\n",
     "        model_checkpoint=sam_path,\n",
     "    )\n",
-    "    tifffile.imwrite(out_path, mask)"
+    "    tifffile.imwrite(out_path, mask)\n",
+    "\n",
+    "    del img\n",
+    "    del mask"
    ]
   },
   {
@@ -279,7 +284,8 @@
     "    axis.imshow(tifffile.imread(out_paths[i]), alpha=0.5)\n",
     "    axis.set_axis_off()\n",
     "\n",
-    "fig.tight_layout()"
+    "fig.tight_layout()\n",
+    "fig.savefig(\"tmp_random_images.png\")"
    ]
   }
  ],
