note where the data is

--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -25,6 +25,7 @@
 	\item How many we ended up with
 	\item Imaging, staining etc.
 	\item Flowchart of fishes
+	\item I used the 878 scales in Carran/Postgrad/ALP_WT_flattened/
 \end{itemize}
 
 \section{Segmentation}
@@ -37,7 +38,9 @@
 			\item Confocal prior - just pick some points in the middle of the image. Not used here.
 			\item SAM model citation
 		\end{itemize}
+	\item These segmentations are in Carran/Postgrad/ALP_WT_flattened_segmentations/
 	\item Manual cleaning
+	\item Cleaned segmentations are in Carran/Postgrad/flattened_segmentations_cleaned/
 \end{itemize}
 
 \section{Elliptic Fourier Descriptors}
