--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -1,3 +1,8 @@
+% This document probably won't compile if you're running it yourself from
+% the git repo, since the images aren't committed and are just in my home
+% directory. This is fine though - this document is just meant to be a
+% skeleton for a write up. I'll send the relevant images via email to the
+% right people...
 \documentclass[11pt,a4paper,notitlepage]{article}
 
 \usepackage[utf8]{inputenc}
@@ -15,8 +20,7 @@
 \begin{document}
 \maketitle
 
-% To make the building work while I don't have any references
-\cite{example2023}
+The code for this analysis is in the github.com/JGIBristol/scale\_morphology repository.
 
 \section{Materials}
 \begin{itemize}
@@ -25,95 +29,165 @@
 	\item How many we ended up with
 	\item Imaging, staining etc.
 	\item Flowchart of fishes
-	\item I used the 878 scales in Carran/Postgrad/ALP_WT_flattened/
+	\item I used the 878 scales in Carran/Postgrad/ALP\_WT\_flattened/
 \end{itemize}
 
 \section{Segmentation}
-\begin{itemize}
-	\item Show an image of a scale and segmentation mask
-	\item SAM steps
-		\begin{itemize}
-			\item Prior
-			\item ALP prior - rough segmentation, pick random points, find bbox
-			\item Confocal prior - just pick some points in the middle of the image. Not used here.
-			\item SAM model citation
-		\end{itemize}
-	\item These segmentations are in Carran/Postgrad/ALP_WT_flattened_segmentations/
-	\item Manual cleaning
-	\item Cleaned segmentations are in Carran/Postgrad/flattened_segmentations_cleaned/
-\end{itemize}
+Here's a scale, and the associated segmentation mask:
+\begin{figure}[h!]
+	\centering
+	\begin{minipage}{0.4\textwidth}
+		\includegraphics[width=\textwidth]{imgs/scale.png}
+	\end{minipage}
+	\begin{minipage}{0.4\textwidth}
+		\includegraphics[width=\textwidth]{imgs/clean_segmentation.png}
+	\end{minipage}
+	\caption{A scale and the associated segmentation mask.
+		Original filename: 10M\_(4.0x)\_Osx\_mcherry\_GFP\_D10Reg\_Fish2\_D10reg\_scale010\_\_OSX\_mcherry
+		\_GFP\_2021\_10\_months\_AL 10M\_(4.0x)\_Osx\_mcherry\_GFP\_D10Reg\_Fish2\_D10reg\_scale010\_\_
+		OSX\_mcherry\_GFP\_2021\_10\_months\_ALP.}
+\end{figure}
+
+We segmented the scales out by first using an AI model, and then manually cleaning the resulting masks.
+
+\subsection{Automated Segmentation}
+We used the Segment Anything Model (SAM 2) [https://arxiv.org/abs/2408.00714] to segment the scale.
+This model is promptable, which means we give it both the image to segment and some additional information
+such as points or bounding boxes which are then used to inform the segmentation. This is useful for us - there's
+often a bubble/hair/loose bit of dye in the image that the SAM model picks up. We can reduce the amount this happens
+by prompting the model.
+
+The scales in our dataset were all stained with ALP which gives them good contrast.
+We developed a method to find a prompt for these scales - first we roughly segment the scale out, then we use this
+rough segmentation to find the prompt.
+The procedure for the rough segmentation is:
+\begin{enumerate}
+	\item Preprocess the scale by enhancing contrast and blurring
+	\item Attempt to segment the scale out by mean thresholding (skimage.threshold\_mean)
+	\item Remove any objects in this segmentation mask that are touching the border of the image
+	\item Remove small objects via binary opening
+	\item Fill holes
+	\item Take the largest connected component in the mask
+\end{enumerate}
+This gives us an approximate segmentation mask for the scale. It isn't good enough to use for the analysis
+(we often miss parts around the edge of the scale, especially when there's high contrast between the
+exposed/embedded parts of the scale), but it is good enough to find our prompt.
+
+We then use this rough segmentation to find the prompt. The prompt for the ALP scale segmentation has two components:
+a set of points and a bounding box.
+The set of points is found by randomly selecting points from the interior of the mask - we do this by running 100 binary erosions
+on the mask, and then randomly choosing some points. The binary erosions ensure that we don't sample points on the very edge of the
+mask, which are less likely to be correct.
+The bounding box is found by simply finding the bounding box of the rough segmentation.
+
+An example of the ALP scale prompt can be seen in Fig.~\ref{alp_prompt}:
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.6\textwidth]{imgs/prompt.png}
+	\caption{The prompt fed into the SAM model.
+		The bounding box and points help the model to segment the correct objet out of the image -
+		note that there are bubbles around the scale that we do not want to pick up.\\
+		Original filename:
+		10M\_(4.0x)\_Osx\_mcherry\_D10reg\_Fish1\_D10reg\_scale003
+		\_\_OSX\_mcherry\_GFP\_2021\_10\_months\_ALP.tif
+	}
+	\label{alp_prompt}
+\end{figure}
+
+We also tried to segment scales from confocal images. This is less tested, and we haven't used it for the rest of the analyis,
+but the prompt here is simply that we take five points in the centre of the image (like the 5 on a die) and prompt
+the model that these must be in the object. This is because we assume the scale is in the middle of the image.
+The contrast is lower for the confocal images, so we can't do the same ALP prompt procedure as above.
+
+The script for running the automated segmentation is at scripts/1-automatic\_segmentation.py in the git repo.
+
+The resulting segmentations are in Carran/Postgrad/ALP\_WT\_flattened\_segmentations/.
+
+\subsection{Cleaning Segmentations}
+Sometimes the SAM model will pick up things that aren't the scale, or only segment out
+parts of the scale. This happened around 10\% of the time for our data. To deal with this,
+we wrote a script using napari[10.5281/zenodo.3555620]/python to create a GUI for cleaning the scale.
+This can be seen in Fig.~\ref{napari}.
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.8\textwidth]{imgs/napari_cleaning_gui.png}
+	\caption{The segmentation cleaning GUI.}
+	\label{napari}
+\end{figure}
+
+Cleaned segmentations are in Carran/Postgrad/flattened\_segmentations\_cleaned/.
 
 \section{Elliptic Fourier Descriptors}
 \begin{itemize}
 	\item Maths - EFD used to describe the boundary of the shape
 	\item Citation for code
 	\item My workflow:
-	\begin{itemize}
-		\item Remove any spurious bits, fill holes - even the clean segmentations sometimes have issues
-		\item Find equally spaced points around the edge of the segmentation
-		\item Re-order points such that we have a consistent ordering.
-			  Otherwise two rotated but otherwise identical shapes will have different EFD descriptors.
-			  In my case, I reorder such that the first point is closest to the CoM of the object.
-		\item Fit to these with pyefd - get coeffs
-		\item Unscaled coeffs, since I care about the size and we want to extract raw features from the coeffs
-		\item You can rotate these coeffs to remove things like rotation information (but the features I calculate later are rotation independent)
-			  and it means the coefficients can't be easily used to plot the shape of the scale (which we might want to do,
-			  to check that the EFD descriptors actually look like our scale)
-	\end{itemize}
+	      \begin{itemize}
+		      \item Remove any spurious bits, fill holes - even the clean segmentations sometimes have issues
+		      \item Find equally spaced points around the edge of the segmentation
+		      \item Re-order points such that we have a consistent ordering.
+		            Otherwise two rotated but otherwise identical shapes will have different EFD descriptors.
+		            In my case, I reorder such that the first point is closest to the CoM of the object.
+		      \item Fit to these with pyefd - get coeffs
+		      \item Unscaled coeffs, since I care about the size and we want to extract raw features from the coeffs
+		      \item You can rotate these coeffs to remove things like rotation information (but the features I calculate later are rotation independent)
+		            and it means the coefficients can't be easily used to plot the shape of the scale (which we might want to do,
+		            to check that the EFD descriptors actually look like our scale)
+	      \end{itemize}
 	\item What we get out
 	\item A note on EFD - a complete description of shape.
-	\begin{itemize}
-		\item Normally people would just chuck things into PCA and hope for the best
-		\item It will find the best linear* combinations that describe the dataset*
-		\item This is fine
-		\item There also seems to be a belief that PCA magically finds the right thing, and that you
-		      might as well chuck your image pixels into PCA to find interesting features. This isn't true.
-		\item We can come up with better (possibly non-linear, see the bumpiness metric below) features
-			  that 1. actually describe the biologically interesting features in the dataset and
-			  2. might never be picked up by pca (e.g. because they are non-linear, or because they don't describe
-			  much global variation but do describe a lot of the difference between our classes).
-		\item EFA is not a list of features derived from our shape - it is a *complete description of it* (down to some length scale)
-		\item This means that ANY (reasonable) feature can be calculated from the EFA coefficients - it might be hard to work out how to do this, but it should be possible
-		\item We show feature selection using EFDs here as an illustration - you could of course get e.g. size
-			  by just counting pixels
-	\end{itemize}
+	      \begin{itemize}
+		      \item Normally people would just chuck things into PCA and hope for the best
+		      \item It will find the best linear* combinations that describe the dataset*
+		      \item This is fine
+		      \item There also seems to be a belief that PCA magically finds the right thing, and that you
+		            might as well chuck your image pixels into PCA to find interesting features. This isn't true.
+		      \item We can come up with better (possibly non-linear, see the bumpiness metric below) features
+		            that 1. actually describe the biologically interesting features in the dataset and
+		            2. might never be picked up by pca (e.g. because they are non-linear, or because they don't describe
+		            much global variation but do describe a lot of the difference between our classes).
+		      \item EFA is not a list of features derived from our shape - it is a *complete description of it* (down to some length scale)
+		      \item This means that ANY (reasonable) feature can be calculated from the EFA coefficients - it might be hard to work out how to do this, but it should be possible
+		      \item We show feature selection using EFDs here as an illustration - you could of course get e.g. size
+		            by just counting pixels
+	      \end{itemize}
 \end{itemize}
 
 \section{Feature Extraction}
 \begin{itemize}
 	\item Features chosen:
-	\begin{itemize}
-		\item Size
-		\item Aspect Ratio
-		\item Bumpiness
-		\begin{itemize}
-			\item Why take the log? Because it makes it look right. Not taking the log squishes everything up to small values like 0.0001 vs 0.000001,
-				  the absolute difference between which isn't that descriptive - but the log-difference is.
-			\item Mathematical explanation: we take the log because we expect the Fourier power to decrease as (at least) some power law:
-			\begin{itemize}
-				\item the scale has finite area/perimiter/is bounded - this tells us that x is square-integrable, i.e. $\int_0^{2\pi}x(t)^2dt$.
-				\item By Parseval's theorem, this means that $\sum_n^\infty(a_n^2 + b_n^2)$ (since the a, b coeffs came from the x points). Same for the $b, c$ coeffs from $y$.
-				\item i.e. total harmonic power must converge - $\sum_{n=1}^\infty \left(a_n^2 + b_n^2 + c_n^2 + d_n^2 \right) < \infty$
-				\item This tells us that the higher harmonics have to $\rightarrow 0$ as $n\rightarrow \infty$.
-				\item How fast they decay is determined by smoothness - if the shape is continuous (but not differentiable, i.e. it has sharp corners) then
-					  our coefficients will decay as $1/n$.
-				\item Further constraints (like having smooth, non-sharp corners or being analytic) will mean the coeffs decay even faster.
-				\item For scales, we can at least say that the Fourier power per harmonic decays at least like $1/n^2$ (but probably faster).
-				\item The bumpiness (fraction of power in higher harmonics) is:
-				\begin{equation}
-					\frac{\sum_n^{nmax} a_n^2}{\sum_1^{nmax} a_n^2}
-				\end{equation}
-				\item Taking the log of this, we get
-				\begin{equation}
-					log\left(\sum_n^{nmax} a_n^2\right) - log\left(\sum_1^{nmax} a_n^2\right)
-				\end{equation}
-				\item Since we expect these to decay as power-laws, we have turned our power-law variation into linear
-					  variation and turned multiplicative variation into additive variation (more intuitive)
-				\item This is too much detail for the paper it's just interesting from an EFA perspective
-			\end{itemize}
-		\end{itemize}
-	\end{itemize}
-    \item[]
+	      \begin{itemize}
+		      \item Size
+		      \item Aspect Ratio
+		      \item Bumpiness
+		            \begin{itemize}
+			            \item Why take the log? Because it makes it look right. Not taking the log squishes everything up to small values like 0.0001 vs 0.000001,
+			                  the absolute difference between which isn't that descriptive - but the log-difference is.
+			            \item Mathematical explanation: we take the log because we expect the Fourier power to decrease as (at least) some power law:
+			                  \begin{itemize}
+				                  \item the scale has finite area/perimiter/is bounded - this tells us that x is square-integrable, i.e. $\int_0^{2\pi}x(t)^2dt$.
+				                  \item By Parseval's theorem, this means that $\sum_n^\infty(a_n^2 + b_n^2)$ (since the a, b coeffs came from the x points). Same for the $b, c$ coeffs from $y$.
+				                  \item i.e. total harmonic power must converge - $\sum_{n=1}^\infty \left(a_n^2 + b_n^2 + c_n^2 + d_n^2 \right) < \infty$
+				                  \item This tells us that the higher harmonics have to $\rightarrow 0$ as $n\rightarrow \infty$.
+				                  \item How fast they decay is determined by smoothness - if the shape is continuous (but not differentiable, i.e. it has sharp corners) then
+				                        our coefficients will decay as $1/n$.
+				                  \item Further constraints (like having smooth, non-sharp corners or being analytic) will mean the coeffs decay even faster.
+				                  \item For scales, we can at least say that the Fourier power per harmonic decays at least like $1/n^2$ (but probably faster).
+				                  \item The bumpiness (fraction of power in higher harmonics) is:
+				                        \begin{equation}
+					                        \frac{\sum_n^{nmax} a_n^2}{\sum_1^{nmax} a_n^2}
+				                        \end{equation}
+				                  \item Taking the log of this, we get
+				                        \begin{equation}
+					                        log\left(\sum_n^{nmax} a_n^2\right) - log\left(\sum_1^{nmax} a_n^2\right)
+				                        \end{equation}
+				                  \item Since we expect these to decay as power-laws, we have turned our power-law variation into linear
+				                        variation and turned multiplicative variation into additive variation (more intuitive)
+				                  \item This is too much detail for the paper it's just interesting from an EFA perspective
+			                  \end{itemize}
+		            \end{itemize}
+	      \end{itemize}
+	\item[]
 	\item Why not just use PCA - global variation instead of class separability, only linear, not biologically informed
 \end{itemize}
 
@@ -124,9 +198,9 @@
 	\item Stats tests explanations - not too much detail
 \end{itemize}
 
-\section{Results}
 
-\bibliographystyle{unsrt}
-\bibliography{references}
+\appendix
+\section{EFD as a complete description of shape}
+\section{Mathematical notes on the bumpiness metric}
 
 \end{document}
